# audexis

./: .eslintrc.json  .gitignore  .npmrc  .rust-analyzer.json  LICENSE  README.md  TODO.md  components.json  dev-app-update.yml  electron-builder.json5  electron-builder.yml  electron.vite.config.ts  entitlements.plist  forge.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vercel.json  vite.config.ts  vite.main.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json
apps/desktop/src/: App.tsx  TagManager.tsx  error.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 20260512191207_init.sql  20260719023544_v1_test.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs  workspace.rs
apps/desktop/src-tauri/src/audio_player/: mod.rs  queue.rs  queue_track.rs
apps/desktop/src-tauri/src/commands/: check_update.rs  clean_up_file_names.rs  get_all_columns.rs  get_all_sidebar_items.rs  get_files.rs  get_folder_children.rs  get_folder_config.rs  get_multi_frame_keys.rs  get_workspace_files.rs  get_workspace_root.rs  import_files.rs  import_image.rs  import_paths.rs  mod.rs  open.rs  open_default.rs  redo.rs  remove_files.rs  rename_files.rs  request_file.rs  request_playback.rs  save_frame_changes.rs  set_folder_config.rs  undo.rs  update_app.rs  update_user_config.rs
apps/desktop/src-tauri/src/config/: folder.rs  user.rs
apps/desktop/src-tauri/src/constants/: mod.rs
apps/desktop/src-tauri/src/database/: mod.rs  utils.rs
apps/desktop/src-tauri/src/file_watcher/: mod.rs
apps/desktop/src-tauri/src/history/: mod.rs
apps/desktop/src-tauri/src/tag_manager/: flac.rs  mod.rs  riff.rs  tag_backend.rs  traits.rs  utils.rs  vorbis.rs
apps/desktop/src-tauri/src/tag_manager/id3/: mod.rs  utils.rs  v1.rs
apps/desktop/src-tauri/src/tag_manager/id3/v2_2/: mod.rs
apps/desktop/src-tauri/src/tag_manager/id3/v2_3/: mod.rs  utils.rs
apps/desktop/src-tauri/src/tag_manager/id3/v2_4/: mod.rs
apps/desktop/src-tauri/src/tag_manager/itunes/: mod.rs  utils.rs
apps/desktop/src-tauri/src/tag_manager/itunes/v0/: mod.rs
apps/desktop/src-tauri/src/tag_manager/ogg/: mod.rs  utils.rs
apps/desktop/src-tauri/src/tag_manager/vorbis_comments/: utils.rs
apps/desktop/src-tauri/src/utils/: filesystem.rs  indexing.rs  mod.rs  naming.rs  tags.rs  types.rs
apps/www/: astro.config.mjs  mdx-components.tsx  next.config.ts  package-lock.json  package.json
apps/www/.astro/: data-store.json  settings.json
apps/www/app/: error.tsx  global-error.tsx  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
apps/www/components/: Button.tsx  DocsSidebar.tsx  DocsSidebarClient.tsx  DownloadButton.tsx  EditOnGitHub.tsx  ImageSVG.tsx  Navbar.tsx  RenamingSVG.tsx  Screenshot.tsx  SearchBar.tsx  TableOfContents.tsx  ThemeProvider.tsx  ThemeToggle.tsx
apps/www/lib/: buttonVariants.ts  github.ts
apps/www/public/: noFlash.js  robots.txt
apps/www/styles/: animations.css  globals.css  shared.css
apps/www/types/: global.d.ts
electron/: MenuTemplate.ts  electron-env.d.ts  main.ts  preload.ts
resources/images/: Audexis.icns
scripts/: canSign.sh  notarize.sh  setup-signing.sh  variables.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  workspace.rs
src-tauri/src/config/: user.rs
src-tauri/src/file_watcher/: mod.rs
src-tauri/src/tag_manager/: traits.rs  utils.rs
src-tauri/src/tag_manager/id3/: mod.rs  utils.rs
src-tauri/src/tag_manager/id3/v2_2/: mod.rs
src-tauri/src/tag_manager/id3/v2_3/: mod.rs  utils.rs
src-tauri/src/tag_manager/id3/v2_4/: mod.rs
src/Icons/: MusicFile.tsx
src/assets/: main.css
src/backend/: main.ts  preload.ts
src/backend/classes/: TagManager.ts  mainWindow.ts
src/backend/utils/: Constants.ts  Events.ts  Id3v2.ts  Shortcuts.ts
src/components/: ArtworkDialog.tsx  ContextMenu.tsx  DragCell.tsx  DraggableHeader.tsx  Dropdown.tsx  EditMenu.tsx  FindReplaceBar.tsx  Header.tsx  Input.tsx  OnboardingModal.tsx  SaveBar.tsx  Select.tsx  SettingsModal.tsx  Sidebar.tsx  Titlebar.tsx  Track.tsx
src/components/onboarding/: FinishSection.tsx  WelcomeSection.tsx  index.ts
src/components/settings/: AdvancedSection.tsx  AppearanceSection.tsx  ColumnsSection.tsx  RadioGroup.tsx  SectionHeader.tsx  SectionNavButton.tsx  Toggle.tsx
src/components/table/: DataGrid.tsx  TagValueChip.tsx
src/components/ui/: input.tsx  table.tsx
src/contexts/: Changes.tsx  Sidbear.tsx
src/hooks/: useAutoUpdater.tsx  useChanges.tsx  useHotkeys.ts  useShortcuts.ts
src/lib/: buttonVariants.ts  utils.ts
src/main/: index.ts
src/main/classes/: TagManager.ts
src/preload/: Constants.ts  index.ts
src/renderer/: index.html  theme.js
src/shared/: Constants.ts
src/types/: index.ts
src/ui/: App.tsx  renderer.tsx
www/: README.md  next.config.ts
www/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
www/components/: DownloadButton.tsx  ThemeProvider.tsx  ThemeToggle.tsx
(+243 files in other folders)
