[package]
name = "audexis"
version = "0.1.0"
description = "An audio metadata editor built with Tauri"
authors = ["Kp Adeyinka"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "audexis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-os = "2.3.2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
rfd = "0.15.3"
tauri-plugin-opener = "2.5.3"
semver = "1.0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
once_cell = "1.21.3"
base64 = "0.21.7"
notify = "6.1"
notify-debouncer-full = "0.3"
tauri-plugin-clipboard-manager = "2.3.2"
[dependencies.uuid]
version = "1.19.0"
# Lets you generate random UUIDs
features = ["v4"]

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false
