[package]
name = "audexis"
version = "0.1.0"
description = "An audio metadata editor built with Tauri"
authors = ["Kp Adeyinka"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "audexis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
audioadapter-buffers = "4.0.0"
base64 = "0.21.7"
cpal = "0.18.1"
crossbeam-channel = "0.5.16"
notify = "6.1"
notify-debouncer-full = "0.3"
once_cell = "1.21.3"
rfd = "0.15.3"
ringbuf = "0.5.0"
rubato = "4.0.0"
semver = "1.0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
symphonia = { version = "0.6.0", features = ["mp3"] }
tauri = { version = "2.11.3", features = [
    "protocol-asset",
    "macos-private-api",
    "tray-icon",
] }

tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
url = "2.5.8"
walkdir = "2"
[dependencies.uuid]
version = "1.19.0"
# Lets you generate random UUIDs
features = ["v4"]

[env]
SQLX_OFFLINE = true

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
